fix progress spinner z-index stack level

--- a/Trustify/src/app/header/header.component.css
+++ b/Trustify/src/app/header/header.component.css
@@ -14,7 +14,6 @@ nav {
 
 :host ::ng-deep mat-tab-header {
     top: 0;
-    z-index: 1000;
     position: sticky;
     position: -webkit-sticky; /* macOS/iOS Safari */
     background-color: white;
